tasks layout and angular

--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,10 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/app/assets/styles.scss"
+            ],
+            "polyfills": [
+              "zone.js"
             ]
           }, 
           "configurations": {
